--- a/uj.css
+++ b/uj.css
@@ -14,7 +14,7 @@ h1 {
   }
   header{
     background-image: url(./image/cover.png);
-   background-size: 100%;
+   background-size: cover;
     background-repeat:no-repeat;
     width: 100%;
     height: 70vh;
